feat: Improvements based on architecture review by AI
Signed-off-by: cbartram <cbartram3@gmail.com>